--- a/app/views/owners/edit.erb
+++ b/app/views/owners/edit.erb
@@ -1,2 +1,21 @@
 <h1>Update Owner</h1>
+<form action='/owners/<%=@owner.id%>' method='post'>
+  <input type='hidden' name='_method' value='patch'>
+  <br>
+  <label>Name: <%=@owner.name%></label>
+  <input type='text' name='owner[name]' id='owner_name' value='<%=@owner.name%>'>
+  <br>
+  <% @pets.each do |pet| %>
+  <input type='checkbox' name='owner[pet_ids][]' id='<%=pet.id%>' value='<%=pet.id%>' <%='checked' if @owner.pets.include?(pet) %>><%=pet.name%></input>
+  <% end %>
+  <br>
 
+  <label>and/or, create a new pet:</label>
+  <br>
+  <label>Name: </label>
+  <input type='text' name='pet[name]' id='pet_name'>
+  <br>
+  <input type='submit' value='Update Owner'>
+
+
+</form>
