--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,15 @@
 <h1>Create a new Pet</h1>
-
+<form action='/pets' method='post'>
+  <label>Name: </label>
+  <input type='text' name='pet[name]' id='pet_name'>
+</input>
+<br>
+<% @owners.each do |owner| %>
+<input type='checkbox' name='pet[owner_id]' id='<%=owner.id%>' value='<%=owner.id%>'><%=owner.name%>
+<% end %>
+<br>
+<label>and/or create a new owner: </label>
+<input type='text' name='owner[name]' id='owner_name'>
+<input type='submit' value='Create Pet'>
+</input>
+</form>
